Adding event-service.js reference into inde.html

--- a/app/index.html
+++ b/app/index.html
@@ -85,6 +85,7 @@
 
     <!-- App JS Utilities - Start -->
     <script src="js/services/ui-load.js"></script>
+    <script src="js/services/event-service.js"></script>
     <script src="js/filters/moment-fromNow.js"></script>
     <script src="js/directives/nganimate.js"></script>
     <script src="js/directives/ui-jq.js"></script>
