Cleaned up landing page

--- a/app/index.html
+++ b/app/index.html
@@ -5,11 +5,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>TruRecruit</title>
-    <meta name="description" content="AngularJs Bootstrap Admin Theme, Angular, Admin, Admin theme">
-    <meta name="keywords" content="AngularJS" , "admin", "widgets", "admin panel", "flat ui", "ui", "web app", "app", "backend", "angular", "dashboard", "bootstrap", "charts", "ui kit", "responsive" />
+    <meta name="description" content="TruRecruit">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
     <!-- Favicon -->
+    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
     <!-- CSS FRAMEWORK - START -->
     <link rel='stylesheet' href='../bower_components/angular-loading-bar/build/loading-bar.min.css' type='text/css' media='all' />
     <!-- Angular Loader -->
@@ -20,12 +19,12 @@
     <link href="../bower_components/animate.css/animate.min.css" rel="stylesheet" type="text/css" />
     <!-- CSS FRAMEWORK - END -->
 
+    <link rel="stylesheet" href="css/landing_page.css">
     <link rel="stylesheet" href="css/app.css">
     <link rel="stylesheet" href="css/normalize.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/jquery.fancybox.css">
     <link rel="stylesheet" href="css/flexslider.css">
-    <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/queries.css">
     <link rel="stylesheet" href="css/etline-font.css">
     <link rel="stylesheet" href="bower_components/animate.css/animate.min.css">
@@ -35,7 +34,7 @@
     <link rel="stylesheet" href="css/app.style2.css">
     <link rel="stylesheet" href="css/app.style3.css">
     <link rel="stylesheet" href="css/app.style4.css"> 
-    -->
+-->
 
 
 </head>
@@ -50,7 +49,7 @@
     <script src="../bower_components/angular-animate/angular-animate.js"></script>
     <!--    <script src="../bower_components/angular-cookies/angular-cookies.js"></script>-->
     <!--    <script src="../bower_components/angular-resource/angular-resource.js"></script>-->
-        <script src="../bower_components/angular-sanitize/angular-sanitize.js"></script>
+    <script src="../bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="../bower_components/angular-touch/angular-touch.js"></script>
     <script src="../bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <!--<script src="../bower_components/ngstorage/ngStorage.js"></script>-->
@@ -76,28 +75,28 @@
     <script src="js/app.router.hospital.js"></script>
     <script src="js/app.router.university.js"></script>
     <script src="js/app.router.music.js"></script>
-    -->
+-->
 
 
 
-    <script src="js/app.main.js"></script>
-    <!-- App JS - End -->
+<script src="js/app.main.js"></script>
+<!-- App JS - End -->
 
-    <!-- App JS Utilities - Start -->
-    <script src="js/services/ui-load.js"></script>
-    <script src="js/services/event-service.js"></script>
-    <script src="js/filters/moment-fromNow.js"></script>
-    <script src="js/directives/nganimate.js"></script>
-    <script src="js/directives/ui-jq.js"></script>
-    <script src="js/directives/ui-module.js"></script>
-    <script src="js/directives/ui-nav.js"></script>
-    <script src="js/directives/ui-bootstrap.js"></script>
-    <script src="js/directives/ui-chatwindow.js"></script>
-    <script src="js/directives/ui-sectionbox.js"></script>
-    <script src="js/controllers/bootstrap.js"></script>
-    <script src="js/controllers/topbar.js"></script>
-    <script src="js/controllers/chat.js"></script>
-    <script src='../bower_components/Chart.js/Chart.js'></script>
+<!-- App JS Utilities - Start -->
+<script src="js/services/ui-load.js"></script>
+<script src="js/services/event-service.js"></script>
+<script src="js/filters/moment-fromNow.js"></script>
+<script src="js/directives/nganimate.js"></script>
+<script src="js/directives/ui-jq.js"></script>
+<script src="js/directives/ui-module.js"></script>
+<script src="js/directives/ui-nav.js"></script>
+<script src="js/directives/ui-bootstrap.js"></script>
+<script src="js/directives/ui-chatwindow.js"></script>
+<script src="js/directives/ui-sectionbox.js"></script>
+<script src="js/controllers/bootstrap.js"></script>
+<script src="js/controllers/topbar.js"></script>
+<script src="js/controllers/chat.js"></script>
+<script src='../bower_components/Chart.js/Chart.js'></script>
 
 </body>
 
