Created app.resume state
- Created app.resume state
-

--- a/app/index.html
+++ b/app/index.html
@@ -20,6 +20,7 @@
     <!-- CSS FRAMEWORK - END -->
 
     <link rel="stylesheet" href="css/landing_page.css">
+    <link rel="stylesheet" href="css/resume_page.css">
     <link rel="stylesheet" href="css/app.css">
     <link rel="stylesheet" href="css/normalize.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -96,6 +97,7 @@
 <script src="js/controllers/bootstrap.js"></script>
 <script src="js/controllers/topbar.js"></script>
 <script src="js/controllers/chat.js"></script>
+<script src="js/controllers/resume.js"></script>
 <script src='../bower_components/Chart.js/Chart.js'></script>
 
 </body>
